# auth_api

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app_configs.yaml  app_configs_example.yaml  makefile  pyproject.toml  requirements.txt
.github/actions/docker-build-push/: action.yml
.github/actions/poetry-install/: action.yml
.github/actions/run-unit-tests/: action.yml
.github/actions/set-env-vars/: action.yml
.github/actions/set-version/: action.yml
.github/workflows/: build-deploy.yaml
src/: setup.py
src/auth_api/app/: api.py  authentication.py  models.py
src/auth_api/databases/: mongo.py
src/auth_api/utils/: tools.py
tests/: test_api.py
