[tool.poetry]
name = "auth_api"
version = "1.0.0"
description = "This is authentication service package."
authors = ["lucasvittal2 <lucasvittal@gmail.com>"]
repository = "https://github.com/lucasvittal2/auth_api"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^4.0.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
mongo = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
