[tool.poetry]
name = "auth_api"
version = "1.0.0"
description = "This is authentication service package."
authors = ["lucasvittal2 <lucasvittal@gmail.com>"]
repository = "https://github.com/lucasvittal2/auth_api"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^4.0.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
mongo = "^0.2.0"
pyjwt = "^2.10.1"
pytz = "^2024.2"
bcrypt = "^4.2.1"
python-dotenv = "^1.0.1"
types-pytz = "^2024.2.0.20241221"
mypy = "^1.14.1"
httpx = "^0.28.1"
pytest = "^8.3.4"
pytest-html = "^4.1.1"
poetry-plugin-export="1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["auth_api.app.*"]
ignore_missing_imports = true
